{
    "name": "InputAction",
    "maps": [
        {
            "name": "GameNavigation",
            "id": "c9a8c54c-ffd1-4b10-b45f-635d5f4b1869",
            "actions": [
                {
                    "name": "Directions",
                    "type": "Value",
                    "id": "b9457769-8b46-41dd-894e-40e7796aa92d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "L1/Game1",
                    "type": "Button",
                    "id": "1b5fb843-223e-4658-8bb2-459c372bdccc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "L2/Game2",
                    "type": "Button",
                    "id": "e089dc70-154d-417f-90fa-cd0d328e2bb5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "R1/Game3",
                    "type": "Button",
                    "id": "29190206-b92d-4534-b07d-67cf6aa97cc9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "R2/Game4",
                    "type": "Button",
                    "id": "92852198-2408-4e4d-86e3-99bc4cce5007",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "8adfdcba-e01f-44c4-aa71-f219bc683588",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "ed3bbf7b-619a-4d75-a913-bb4ec29c4799",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "D-PAD",
                    "id": "facdb3b7-dc54-4846-98a7-2f2f917d2d46",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "48baea91-23e3-4160-8ba0-f95bbd2b8c68",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e6f3156b-bfe1-4a59-b303-374fa2ad96e8",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8a2848ab-7525-4d6e-a9b1-9ab1684ebe21",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "78a6a4fc-a629-4f6b-b5d2-4f54fde34ce6",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD",
                    "id": "4ef1a630-9686-40b9-aedc-3035fcf95288",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "44d8d15e-1e0d-42be-8161-07751e6c162b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7183ea11-3e2f-40f5-bcb8-4677b755359a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d9367719-c8b4-469e-8450-2ac6e7882784",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9af26c11-01e4-46d3-a1ab-63a4a237138d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow-Keys",
                    "id": "3c4e3f85-c48b-49cd-8e2b-d4d98acfd220",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f27f7e63-0de7-41fd-bb24-a1950bb7e4e0",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1786ecca-e750-47b5-b4e2-c6e9824fbcc2",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c811edf0-d6f8-4939-863e-b594f4290c8c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2857ba5e-bef9-4ed2-bfde-77a19a621512",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1bc71db4-420d-4991-b06f-7f845c642165",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L1/Game1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e50c07f6-61d5-4c9d-90a2-976fb3c7e9d7",
                    "path": "<Keyboard>/#(1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L1/Game1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd3e2518-d414-4433-a0d3-3e125af1eb6b",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L2/Game2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "888ec78a-c1b2-4465-be4b-efcaa25add76",
                    "path": "<Keyboard>/#(2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L2/Game2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5dbd1395-4d50-4914-983f-893aff16fd73",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R1/Game3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdc82770-e921-4bfd-b69e-93c74eb0dda9",
                    "path": "<Keyboard>/#(3)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R1/Game3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4647168-17c7-4ad7-9bde-825f9f210b40",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R2/Game4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d58d398-21d4-434f-93c7-429a50af04df",
                    "path": "<Keyboard>/#(4)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R2/Game4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a2d0914-f7bf-4495-8f25-7a7ba6ba7333",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db7f9917-0a69-4515-9f7a-b5a855fa8c1e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1376aace-42e5-4a9b-9471-58f0a2e1858e",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f3954ba-22f2-49d2-adf8-d06aa5d939d0",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}